# Self_Knowledge_Evolve

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  demo_pipeline.py  package-lock.json  package.json  run_dev.py  run_overnight.py  run_stress_test.py  start.bat  start_dev.bat  worker.py
.openclaw/: workspace-state.json
docs/: architecture-decisions.md  architecture-design-20260402.md  candidate-merge-design.md  candidate-review-design.md  development-plan-detailed.md  development-spec-20260402.md  ontology-versioning-design.md  refactoring-plan.md  segmentation-and-extraction-refactor.md  semcore-framework-design.md  telecom-ontology-design.md  telecom-semantic-kb-system-design.md  数通域本体重构_概念机制方法条件场景.md  网络通信工程知识组织综述_概念机制方法条件场景.md
ontology/domains/: ip_network.yaml  ip_network_conditions.yaml  ip_network_evolved.yaml  ip_network_mechanisms.yaml  ip_network_methods.yaml  ip_network_scenarios.yaml
ontology/lexicon/: aliases.yaml
ontology/top/: relations.yaml
scripts/: init_neo4j.py  init_postgres.sql  load_ontology.py
scripts/migrations/: 004_stats_snapshots.sql  005_relation_candidates.sql
semantic-context-kit/: README.md  pyproject.toml
semantic-context-kit/docs/: agent-knowledge-integration-design.md  design.md
semantic-context-kit/examples/: demo_agent_integration.py  learned_output.json
semantic-context-kit/semantic_context_kit/: __init__.py  annotator.py  checker.py  index.py  kit.py  loader.py  models.py  reasoner.py
semcore/: pyproject.toml
semcore/semcore/: __init__.py  (+1 more)
src/: app.py  app_factory.py
static/: dashboard.html
(+84 files in other folders)
